--- a/index.html
+++ b/index.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Title</title>
-  </head>
-  <body>
-    <p>Paragraph</p>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="description" content="Dividing numbers, in Javascript" />
+  <meta name="keywords" content="mths, icd2o" />
+  <meta name="author" content="Kyle Matthew" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png" />
+  <link rel="manifest" href="site.webmanifest" />
+  <title>Dividing numbers, in Javascript</title>
+</head>
+
+<body>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script defer src="./js/script.js"></script>
+
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <span class="mdl-layout-title">Dividing numbers, in Javascript</span>
+      </div>
+    </header>
+
+    <main class="mdl-layout__content">
+      <div class="page-content">
+        <div class="right-image">
+          <img src="./images/Screenshot 2025-05-09 6.41.07 PM.png" alt="dividing numbers image" />
+        </div>
+
+        <h5>Please enter your numbers here:</h5>
+
+        <p>Enter 1st Number</p>
+        <div class="mdl-textfield mdl-js-textfield">
+          <input type="number" id="first-num" placeholder="Enter 1st Number">
+        </div>
+
+        <p>Enter 2nd Number</p>
+        <div class="mdl-textfield mdl-js-textfield">
+          <input type="number" id="second-num" placeholder="Enter 2nd Number">
+        </div>
+
+        <!-- Raised button with ripple -->
+        <br>
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+          onclick="divdeNumber()" type="button">
+          CALCULATE
+        </button>
+        </form>
+        <br />
+        <div class="page-content-answer">
+          <div id="result"></div>
+        </div>
+    </main>
+  </div>
+</body>
+
 </html>
